--- a/fitnesse/resources/bootstrap-plus/less/dark/badges.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/badges.less
@@ -7,7 +7,7 @@
 .badge {
   display: inline-block;
   min-width: 10px;
-  padding: 3px 7px;
+  padding: 1px 7px 4px 7px;
   font-size: @font-size-small;
   font-weight: @badge-font-weight;
   color: @badge-color;
